added  profile section/auto fill with saved details feature
